Professional Hockeys Club section done

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       }
     </style>
   </head>
-  <body class="font-manrope container mx-auto lg:px-36 px-5">
-    <header class="lg:my-12 my-5">
+  <body class="font-manrope ">
+    <header class="lg:my-12 my-5 container mx-auto lg:px-36 px-5">
       <nav >
         <div class="navbar bg-base-100">
           <div class="navbar-start">
@@ -144,7 +144,6 @@
                   "Embark on an exhilarating journey as you meet the heroes of the hockey field, where passion and skill collide on the icy battleground of teamwork and determination."
                 </p>
               </div>
-
         </div>
           </div>
           <div
@@ -157,19 +156,55 @@
                   "Embark on an exhilarating journey as you meet the heroes of the hockey field, where passion and skill collide on the icy battleground of teamwork and determination."
                 </p>
               </div>
-
-
         </div>
-
-
-
       </div>
     </header>
-    <section>
-      <div >
+    <main class="container mx-auto lg:px-36 px-5">
+      <section>
+      <div class="text-center" >
+        <h2 class="lg:text-3xl text-2xl font-extrabold mb-6">Professional Hockeys Club</h2>
+        <p class="text-[#13131899] font-medium">"Join a community united by a love for the game, forging a path to glory with skill, dedication, and camaraderie."</p>
+      </div>
+    </section>
+    <section class="grid grid-cols-1 lg:grid-cols-4 lg:my-20 my-12 gap-8">
+      <div class="flex flex-col justify-center items-center space-y-4">
+        <div class="radial-progress font-extrabold text-red-500" style="--value:87;" role="progressbar">87%</div>
+        <div>
+          <h3 class="text-center text-[#131318] font-semibold text-xl">Prayer Facility</h3>
+          <p class="text-center text-[#13131899] mt-4">A serene space for reflection, our prayer facility offers tranquility.</p>
+        </div>
+      </div>
+      <div class="flex flex-col justify-center items-center space-y-4"  >
+        <div class="radial-progress font-extrabold text-[#49D293]" style="--value:95;" role="progressbar">95%</div>
+        <div>
+          <h3 class="text-center text-[#131318] font-semibold text-xl">Experienced Coach</h3>
+          <p class="text-center text-[#13131899] mt-4">"Guided by the wisdom of an experienced coach"</p>
+        </div>
+      </div>
+      <div class="flex flex-col justify-center items-center space-y-4"  >
+        <div class="radial-progress font-extrabold text-[#FFB546]" style="--value:90;" role="progressbar">90%</div>
+        <div>
+          <h3 class="text-center text-[#131318] font-semibold text-xl">Senior Player</h3>
+          <p class="text-center text-[#13131899] mt-4">A seasoned maestro on the field, our senior player embodies skill</p>
+        </div>
+      </div>
+      <div class="flex flex-col justify-center items-center space-y-4"  >
+        <div class="radial-progress font-extrabold text-[#4C8DF1]" style="--value:80;" role="progressbar">80%</div>
+        <div>
+          <h3 class="text-center text-[#131318] font-semibold text-xl">Training Ground</h3>
+          <p class="text-center text-[#13131899] mt-4">Our training ground molds athletes with relentless dedication</p>
+        </div>
 
       </div>
     </section>
+
+
+<!-- Program section -->
+    <section>
+
+    </section>
+    </main>
+
 
 
 
