Programm section added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       }
     </style>
   </head>
-  <body class="font-manrope ">
+  <body class="font-manrope">
     <header class="lg:my-12 my-5 container mx-auto lg:px-36 px-5">
       <nav >
         <div class="navbar bg-base-100">
@@ -201,6 +201,54 @@
 
 <!-- Program section -->
     <section>
+      <div class="text-center">
+        <h2 class="lg:text-3xl text-2xl font-extrabold mb-6">Program Sections</h2>
+        <p class="text-[#13131899] font-medium">"Explore the diverse realms of our hockey program sections, tailored for skill development, strategy refinement, and a unified team synergy."</p>
+      </div>
+      <div class="grid lg:grid-cols-2 gap-6">
+        <div>
+          <div class="relative rounded-3xl ">
+            <img class="w-full" src="./Images/2.png" alt="">
+            <div class="absolute top-0 left-0 w-full h-full rounded-xl bg-[#13131880] ">
+            </div>
+            <div class="absolute bottom-10 left-10">
+            <h3 class="lg:text-2xl text-white lg:font-extrabold">Junior Program</h3>
+            <p class="text-white">"Fueling young passion for hockey, our junior program crafts skilled players through specialized training, teamwork, and a love for the game, paving the way for future excellence."</p>
+            <button class="rounded-lg text-lg font-bold lg:px-3 lg:py-2 mt-2 bg-[#FF4240] text-white">Register Now!</button>
+
+          </div>
+          </div>
+
+        </div>
+        <div>
+          <div class="relative rounded-3xl ">
+            <img class="w-full" src="./Images/3.png" alt="">
+            <div class="absolute top-0 left-0 w-full h-full rounded-xl bg-[#13131880]">
+            </div>
+            <div class="absolute bottom-10 left-10">
+            <h3 class="lg:text-2xl text-white lg:font-extrabold">Junior Program</h3>
+            <p class="text-white">"Fueling young passion for hockey, our junior program crafts skilled players through specialized training, teamwork, and a love for the game, paving the way for future excellence."</p>
+            <button class="rounded-lg text-lg font-bold lg:px-3 lg:py-2 mt-2 bg-[#FF4240] text-white">Register Now!</button>
+
+          </div>
+          </div>
+
+        </div>
+        <div class="col-span-2">
+          <div class="relative rounded-3xl ">
+            <img class="w-full" src="./Images/4.png" alt="">
+            <div class="absolute top-0 left-0 w-full h-full rounded-xl bg-[#13131880]">
+            </div>
+          </div>
+          <div>
+            <h3>Junior Program</h3>
+            <p>"Fueling young passion for hockey, our junior program crafts skilled players through specialized training, teamwork, and a love for the game, paving the way for future excellence."</p>
+
+
+          </div>
+        </div>
+
+      </div>
 
     </section>
     </main>
