Product Section Done

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div>
           <div class="relative rounded-3xl ">
             <img class="w-full" src="./Images/3.png" alt="">
-            <div class="absolute top-0 left-0 w-full h-full rounded-xl bg-[#13131880]">
+            <div class="absolute top-0 left-0 w-full h-full rounded-xl bg-[#13131880] ">
             </div>
             <div class="absolute lg:bottom-10 lg:left-10 bottom-5 left-5 ">
               <h3 class="lg:text-2xl text-xl text-white font-extrabold">Teenager Program</h3>
@@ -232,6 +232,262 @@
       </div>
 
     </section>
+    <!-- Our New Products Section -->
+    <section class="my-32">
+      <div class="text-center">
+        <h2 class="lg:text-3xl text-2xl font-extrabold mb-6">Our New Products</h2>
+        <p class="text-[#13131899] font-medium">These is best product of us.Here The details of our new product.</p>
+      </div>
+      <div>
+        <div>
+          <!-- card Section -->
+          <div class="grid lg:grid-cols-2 grid-cols-1 mt-12 lg:mt-20 gap-6">
+            <!-- card1 -->
+     <div class="">
+  <div class="flex flex-col lg:flex-row border border-[#1313181a] rounded-2xl p-6 shadow-xl">
+    <div class="mr-5 w-full">
+      <img src="./Images/5.png " class="max-w-sm rounded-lg w-full" />
+    </div>
+    <div>
+      <div class="flex gap-4 mb-3 mt-3">
+        <div class="flex items-center gap-2">
+          <i class="fa-solid fa-star text-yellow-500"></i>
+        <p>5.0</p>
+        </div>
+        <div class="flex items-center gap-2">
+          <i class="fa-regular fa-eye"></i>
+        <p>20</p>
+
+        </div>
+        <div class="flex items-center gap-2">
+       <i class="fa-regular fa-heart"></i>
+        <p>200</p>
+
+        </div>
+      </div>
+      <h1 class="text-xl font-bold">World Cup Jersey</h1>
+      <p class="py-5">Distinct design, emblematic pride—our World Cup jersey symbolizes triumph and unity.</p>
+      <div class="flex lg:justify-between lg:flex-row flex-col">
+        <p class="text-[#FF4240] font-bold">Price - $22.00</p>
+        <div class="flex items-center gap-2">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <p>Delivery Fee : Free</p>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+          </div>
+            <!-- end -->
+            <!-- Card-2 -->
+            <div class="">
+  <div class="flex flex-col lg:flex-row border border-[#1313181a] rounded-2xl p-6 shadow-xl">
+    <div class="mr-5 w-full">
+      <img src="./Images/6.png " class="max-w-sm rounded-lg w-full" />
+    </div>
+    <div>
+      <div class="flex gap-4 mb-3 mt-3">
+        <div class="flex items-center gap-2">
+          <i class="fa-solid fa-star text-yellow-500"></i>
+        <p>5.0</p>
+        </div>
+        <div class="flex items-center gap-2">
+          <i class="fa-regular fa-eye"></i>
+        <p>20</p>
+
+        </div>
+        <div class="flex items-center gap-2">
+       <i class="fa-regular fa-heart"></i>
+        <p>200</p>
+
+        </div>
+      </div>
+      <h1 class="text-xl font-bold">World Cup Jersey</h1>
+      <p class="py-5">Distinct design, emblematic pride—our World Cup jersey symbolizes triumph and unity.</p>
+      <div class="flex lg:justify-between lg:flex-row flex-col">
+        <p class="text-[#FF4240] font-bold">Price - $22.00</p>
+        <div class="flex items-center gap-2">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <p>Delivery Fee : Free</p>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+          </div>
+            <!-- Card-2 end -->
+            <div class="">
+  <div class="flex flex-col lg:flex-row border border-[#1313181a] rounded-2xl p-6 shadow-xl ">
+    <div class="mr-5 w-full">
+      <img src="./Images/7.png " class="max-w-sm rounded-lg w-full" />
+    </div>
+    <div>
+      <div class="flex gap-4 mb-3 mt-3">
+        <div class="flex items-center gap-2">
+          <i class="fa-solid fa-star text-yellow-500"></i>
+        <p>5.0</p>
+        </div>
+        <div class="flex items-center gap-2">
+          <i class="fa-regular fa-eye"></i>
+        <p>20</p>
+
+        </div>
+        <div class="flex items-center gap-2">
+       <i class="fa-regular fa-heart"></i>
+        <p>200</p>
+
+        </div>
+      </div>
+      <h1 class="text-xl font-bold">World Cup Jersey</h1>
+      <p class="py-5">Distinct design, emblematic pride—our World Cup jersey symbolizes triumph and unity.</p>
+      <div class="flex lg:justify-between lg:flex-row flex-col">
+        <p class="text-[#FF4240] font-bold">Price - $22.00</p>
+        <div class="flex items-center gap-2">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <p>Delivery Fee : Free</p>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+          </div>
+
+
+            <!-- card-3 end -->
+            <!-- card-4 -->
+             <div class="">
+  <div class="flex flex-col lg:flex-row border border-[#1313181a] rounded-2xl p-6 shadow-xl">
+    <div class="mr-5 w-full">
+      <img src="./Images/8.png " class="max-w-sm rounded-lg w-full" />
+    </div>
+    <div>
+      <div class="flex gap-4 mb-3 mt-3">
+        <div class="flex items-center gap-2">
+          <i class="fa-solid fa-star text-yellow-500"></i>
+        <p>5.0</p>
+        </div>
+        <div class="flex items-center gap-2">
+          <i class="fa-regular fa-eye"></i>
+        <p>20</p>
+
+        </div>
+        <div class="flex items-center gap-2">
+       <i class="fa-regular fa-heart"></i>
+        <p>200</p>
+
+        </div>
+      </div>
+      <h1 class="text-xl font-bold">World Cup Jersey</h1>
+      <p class="py-5">Distinct design, emblematic pride—our World Cup jersey symbolizes triumph and unity.</p>
+      <div class="flex lg:justify-between lg:flex-row flex-col">
+        <p class="text-[#FF4240] font-bold">Price - $22.00</p>
+        <div class="flex items-center gap-2">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <p>Delivery Fee : Free</p>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+          </div>
+
+
+            <!-- card-4 end-->
+            <!-- Card-5 -->
+              <div class="">
+  <div class="flex flex-col lg:flex-row border border-[#1313181a] rounded-2xl p-6 shadow-xl">
+    <div class="mr-5 w-full">
+      <img src="./Images/9.png " class="max-w-sm rounded-lg w-full" />
+    </div>
+    <div>
+      <div class="flex gap-4 mb-3 mt-3">
+        <div class="flex items-center gap-2">
+          <i class="fa-solid fa-star text-yellow-500"></i>
+        <p>5.0</p>
+        </div>
+        <div class="flex items-center gap-2">
+          <i class="fa-regular fa-eye"></i>
+        <p>20</p>
+
+        </div>
+        <div class="flex items-center gap-2">
+       <i class="fa-regular fa-heart"></i>
+        <p>200</p>
+
+        </div>
+      </div>
+      <h1 class="text-xl font-bold">World Cup Jersey</h1>
+      <p class="py-5">Distinct design, emblematic pride—our World Cup jersey symbolizes triumph and unity.</p>
+      <div class="flex lg:justify-between lg:flex-row flex-col">
+        <p class="text-[#FF4240] font-bold">Price - $22.00</p>
+        <div class="flex items-center gap-2">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <p>Delivery Fee : Free</p>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+          </div>
+            <!-- Card-5 end-->
+
+            <!-- Card-6 -->
+              <div class="">
+  <div class="flex flex-col lg:flex-row border border-[#1313181a] rounded-2xl p-6 shadow-xl">
+    <div class="mr-5 w-full">
+      <img src="./Images/10.png " class="max-w-sm rounded-lg w-full" />
+    </div>
+    <div>
+      <div class="flex gap-4 mb-3 mt-3">
+        <div class="flex items-center gap-2">
+          <i class="fa-solid fa-star text-yellow-500"></i>
+        <p>5.0</p>
+        </div>
+        <div class="flex items-center gap-2">
+          <i class="fa-regular fa-eye"></i>
+        <p>20</p>
+
+        </div>
+        <div class="flex items-center gap-2">
+       <i class="fa-regular fa-heart"></i>
+        <p>200</p>
+
+        </div>
+      </div>
+      <h1 class="text-xl font-bold">World Cup Jersey</h1>
+      <p class="py-5">Distinct design, emblematic pride—our World Cup jersey symbolizes triumph and unity.</p>
+      <div class="flex lg:justify-between lg:flex-row flex-col">
+        <p class="text-[#FF4240] font-bold">Price - $22.00</p>
+        <div class="flex items-center gap-2">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <p>Delivery Fee : Free</p>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+          </div>
+
+            <!-- Card-6 end-->
+
+          </div>
+
+          <!-- end -->
+        </div>
+      </div>
+
+
+    </section>
+
+    
+
+
   </main>
 </body>
 
