Clients Question Section Done

--- a/index.html
+++ b/index.html
@@ -485,7 +485,78 @@
 
     </section>
 
-    
+    <section >
+      <div class="text-center">
+        <h2 class="lg:text-3xl text-2xl font-extrabold mb-6">Clients Question</h2>
+        <p class="text-[#13131899] font-medium">Here we explain and discuss most common Client Questions which are frequently asked</p>
+      </div>
+      <div class="grid grid-cols-1 lg:grid-cols-3 space-y-5 lg:gap-10 border border-[#1313181a] rounded-2xl p-6 lg:p-8 mt-16">
+        <div class="col-span-1 lg:mt-8">
+          <img class="w-full" src="./Images/11.png" alt="">
+        </div>
+        <div class="col-span-2 space-y-5">
+          <!-- qusn -->
+          <div class="collapse collapse-plus bg-base-200">
+  <input type="radio" name="my-accordion-3" checked="checked" />
+  <div class="collapse-title text-xl font-medium">
+    Our Equipment
+  </div>
+  <div class="collapse-content">
+    <p>Durable, high-performance gear, elevating your play in every sporting endeavor.</p>
+  </div>
+</div>
+<div class="collapse collapse-plus bg-base-200">
+  <input type="radio" name="my-accordion-3" />
+  <div class="collapse-title text-xl font-medium">
+    Hockey Training
+  </div>
+  <div class="collapse-content">
+    <p>"Precision drills, teamwork emphasis—our hockey training sharpens skills for victory."</p>
+  </div>
+</div>
+<div class="collapse collapse-plus bg-base-200">
+  <input type="radio" name="my-accordion-3" />
+  <div class="collapse-title text-xl font-medium">
+    Private Lessons
+  </div>
+  <div class="collapse-content">
+    <p>"Tailored guidance, personalized progress—private lessons elevate skills with focused coaching."</p>
+  </div>
+</div>
+<div class="collapse collapse-plus bg-base-200">
+  <input type="radio" name="my-accordion-3" />
+  <div class="collapse-title text-xl font-medium">
+    Ski Touring
+  </div>
+  <div class="collapse-content">
+    <p>"Alpine adventure, gliding through pristine snowscapes on thrilling ski tours."</p>
+  </div>
+</div>
+<div class="collapse collapse-plus bg-base-200">
+  <input type="radio" name="my-accordion-3" />
+  <div class="collapse-title text-xl font-medium">
+    Booking
+  </div>
+  <div class="collapse-content">
+    <p>"Seamless reservations, secure your spot with our user-friendly online booking."</p>
+  </div>
+</div>
+<div class="collapse collapse-plus bg-base-200">
+  <input type="radio" name="my-accordion-3" />
+  <div class="collapse-title text-xl font-medium">
+    Pricings
+  </div>
+  <div class="collapse-content">
+    <p>"Competitive rates, diverse plans; our pricings cater to every need."</p>
+  </div>
+</div>
+<!-- end -->
+
+
+        </div>
+      </div>
+
+    </section>
 
 
   </main>
