Form and contact section added

--- a/index.html
+++ b/index.html
@@ -557,6 +557,12 @@
       </div>
 
     </section>
+    <section class=" my-14 lg:my-32">
+      <div class="text-center">
+        <h2 class="lg:text-3xl text-2xl font-extrabold mb-6">Get In Touch</h2>
+        <p class="text-[#13131899] font-medium">Here is our contract section and fill the form and send us for any enquiry.</p>
+      </div>
+    </section>
 
 
   </main>
