message section done

--- a/index.html
+++ b/index.html
@@ -621,6 +621,15 @@
 
             </div>
           </div>
+          <div class="mt-6">
+            <div class="space-y-4">
+              <label for="textarea" class=" text-xl font-bold">Message</label> <br>
+              <textarea class="py-5 text-[#9CA3AF] pl-6 w-full rounded-xl border shadow-lg" name="" id="" cols="30" rows="12">Write your message</textarea>
+            </div>
+            <button class="bg-[#FF4240] text-white font-bold text-xl w-full py-3 my-5 rounded-xl ">Send Message</button>
+
+          </div>
+
 
 
         </div>
