some paragraph update

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
         </div>
         <div class="relative rounded-3xl lg:col-span-2">
-          <img class="w-full h-[225px] lg:h-auto" src="./Images/4.png" alt="">
+          <img class="w-full h-[230px] lg:h-auto" src="./Images/4.png" alt="">
           <div class="absolute top-0 left-0 w-full h-full rounded-xl bg-[#13131880]">
           </div>
           <div class="absolute lg:bottom-10 lg:left-10 bottom-5 left-5 ">
@@ -271,11 +271,11 @@
 
                     </div>
                   </div>
-                  <h1 class="text-xl font-bold">World Cup Jersey</h1>
-                  <p class="py-5">Distinct design, emblematic pride—our World Cup jersey symbolizes triumph and unity.
+                  <h1 class="text-xl font-bold">World Cup Jacket</h1>
+                  <p class="py-5">Stylish and symbolic, our World Cup jacket signifies global sporting excellence.
                   </p>
                   <div class="flex lg:justify-between lg:flex-row flex-col">
-                    <p class="text-[#FF4240] font-bold">Price - $22.00</p>
+                    <p class="text-[#FF4240] font-bold">Price - $25.00</p>
                     <div class="flex items-center gap-2">
                       <i class="fa-solid fa-cart-shopping"></i>
                       <p>Delivery Fee : Free</p>
@@ -310,8 +310,8 @@
 
                     </div>
                   </div>
-                  <h1 class="text-xl font-bold">World Cup Jersey</h1>
-                  <p class="py-5">Distinct design, emblematic pride—our World Cup jersey symbolizes triumph and unity.
+                  <h1 class="text-xl font-bold">World Cup Trophy</h1>
+                  <p class="py-5">Icon of glory, our World Cup trophy epitomizes triumph and excellence.
                   </p>
                   <div class="flex lg:justify-between lg:flex-row flex-col">
                     <p class="text-[#FF4240] font-bold">Price - $22.00</p>
@@ -348,8 +348,8 @@
 
                     </div>
                   </div>
-                  <h1 class="text-xl font-bold">World Cup Jersey</h1>
-                  <p class="py-5">Distinct design, emblematic pride—our World Cup jersey symbolizes triumph and unity.
+                  <h1 class="text-xl font-bold">World Cup Cap</h1>
+                  <p class="py-5">Champion style, iconic emblem—our World Cup cap epitomizes victory spirit.
                   </p>
                   <div class="flex lg:justify-between lg:flex-row flex-col">
                     <p class="text-[#FF4240] font-bold">Price - $22.00</p>
@@ -430,8 +430,8 @@
 
                     </div>
                   </div>
-                  <h1 class="text-xl font-bold">World Cup Jersey</h1>
-                  <p class="py-5">Distinct design, emblematic pride—our World Cup jersey symbolizes triumph and unity.
+                  <h1 class="text-xl font-bold">World Cup Helmet</h1>
+                  <p class="py-5">Striking protection, emblematic flair—our World Cup helmet defines winning confidence.
                   </p>
                   <div class="flex lg:justify-between lg:flex-row flex-col">
                     <p class="text-[#FF4240] font-bold">Price - $22.00</p>
@@ -470,8 +470,8 @@
 
                     </div>
                   </div>
-                  <h1 class="text-xl font-bold">World Cup Jersey</h1>
-                  <p class="py-5">Distinct design, emblematic pride—our World Cup jersey symbolizes triumph and unity.
+                  <h1 class="text-xl font-bold">World Cup Football</h1>
+                  <p class="py-5">Precision play, iconic design—our World Cup football epitomizes championship excellence.
                   </p>
                   <div class="flex lg:justify-between lg:flex-row flex-col">
                     <p class="text-[#FF4240] font-bold">Price - $22.00</p>
@@ -629,16 +629,24 @@
             <button class="bg-[#FF4240] text-white font-bold text-xl w-full py-3 my-5 rounded-xl ">Send Message</button>
 
           </div>
-
-
-
         </div>
-
+      </div>
+      <div class="rounded-xl bg-[#13191308] text-center py-7 lg:py-9 w-full">
+        <h3 class="text-2xl font-extrabold">Social Media</h3>
+        <div class="pt-8 text-2xl flex gap-6 justify-center ">
+          <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+        </div>
       </div>
     </section>
-
-
   </main>
+<!-- footer -->
+<footer class="container mx-auto bg-[#131318]">
+
+
+</footer>
 </body>
 
 </html>
