--- a/index.html
+++ b/index.html
@@ -644,6 +644,54 @@
   </main>
 <!-- footer -->
 <footer class="container mx-auto bg-[#131318]">
+  <div class="px-5 py-8 lg:px-36 lg:py-20 ">
+    <div class="">
+      <div class="flex flex-col items-center ">
+        <h3 class="text-white font-extrabold text-3xl">Get In Touch</h3>
+        <p class="text-[#ffffff99]">If you have any Question You can Contact with us. We help you by any how.</p>
+        <div>
+              <div class="flex gap-4 mb-4 items-center">
+                <i class="fa-regular fa-envelope text-red-500"></i>
+                <p class="text-[#ffffffcc]">sifatict26@gmail.com</p>
+              </div>
+              <div class="flex gap-4 items-center">
+                <i class="fa-solid fa-phone text-red-500"></i>
+                <p class="text-[#ffffffcc]">01521565250</p>
+              </div>
+            </div>
+      </div>
+      <div>
+        <div>
+          <h4 class="text-white font-bold">Company</h4>
+          <p class="text-[#ffffff99]">About us</p>
+          <p class="text-[#ffffff99]">Leadership</p>
+          <p class="text-[#ffffff99]">Careers</p>
+          <p class="text-[#ffffff99]">News & Article</p>
+          <p class="text-[#ffffff99]">Legal Notice</p>
+        </div>
+        <div>
+          <h4 class="text-white font-bold">Support</h4>
+          <p class="text-[#ffffff99]">Help Center</p>
+          <p class="text-[#ffffff99]">FAQ</p>
+          <p class="text-[#ffffff99]">Ticket</p>
+          <p class="text-[#ffffff99]">Support</p>
+          <p class="text-[#ffffff99]">Contact Us</p>
+
+        </div>
+      </div>
+      <div>
+        <div>
+          <h4 class="text-white font-bold">Services</h4>
+          <p class="text-[#ffffff99]">Academy</p>
+          <p class="text-[#ffffff99]">Group Lesson</p>
+          <p class="text-[#ffffff99]">Private Lesson</p>
+          <p class="text-[#ffffff99]">Hockeys for kids</p>
+          <p class="text-[#ffffff99]">Hockeys for Adult</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
 </footer>
