--- a/index.html
+++ b/index.html
@@ -645,11 +645,11 @@
 <!-- footer -->
 <footer class="container mx-auto bg-[#131318]">
   <div class="px-5 py-8 lg:px-36 lg:py-20 ">
-    <div class="">
-      <div class="flex flex-col items-center ">
-        <h3 class="text-white font-extrabold text-3xl">Get In Touch</h3>
+    <div class="flex flex-col lg:flex row justify-between items-center lg:gap-20 lg:p-5">
+      <div class="space-y-4 flex flex-1 flex-col items-center text-center  mb-6  lg:items-start lg:text-start ">
+        <h3 class="text-white font-extrabold text-2xl lg:text-3xl">Get In Touch</h3>
         <p class="text-[#ffffff99]">If you have any Question You can Contact with us. We help you by any how.</p>
-        <div>
+        <div >
               <div class="flex gap-4 mb-4 items-center">
                 <i class="fa-regular fa-envelope text-red-500"></i>
                 <p class="text-[#ffffffcc]">sifatict26@gmail.com</p>
@@ -660,9 +660,9 @@
               </div>
             </div>
       </div>
-      <div>
-        <div>
-          <h4 class="text-white font-bold">Company</h4>
+      <div class="flex flex-1  gap-10 lg:gap-20 justify-between mb-6">
+        <div class="mb-6">
+          <h4 class="text-white font-bold mb-6">Company</h4>
           <p class="text-[#ffffff99]">About us</p>
           <p class="text-[#ffffff99]">Leadership</p>
           <p class="text-[#ffffff99]">Careers</p>
@@ -670,7 +670,7 @@
           <p class="text-[#ffffff99]">Legal Notice</p>
         </div>
         <div>
-          <h4 class="text-white font-bold">Support</h4>
+          <h4 class="text-white font-bold mb-6">Support</h4>
           <p class="text-[#ffffff99]">Help Center</p>
           <p class="text-[#ffffff99]">FAQ</p>
           <p class="text-[#ffffff99]">Ticket</p>
@@ -679,9 +679,9 @@
 
         </div>
       </div>
-      <div>
+      <div class="flex-1 mb-12 text-white flex flex-col items-end text-start">
         <div>
-          <h4 class="text-white font-bold">Services</h4>
+          <h4 class="text-white font-bold mb-6">Services</h4>
           <p class="text-[#ffffff99]">Academy</p>
           <p class="text-[#ffffff99]">Group Lesson</p>
           <p class="text-[#ffffff99]">Private Lesson</p>
