footer bug fixed

--- a/index.html
+++ b/index.html
@@ -644,8 +644,8 @@
   </main>
 <!-- footer -->
 <footer class="container mx-auto bg-[#131318]">
-  <div class="px-5 py-8 lg:px-36 lg:py-20 ">
-    <div class="flex flex-col lg:flex row justify-between items-center lg:gap-20 lg:p-5">
+  <div class="px-5 lg:px-36 py-8  lg:py-20 ">
+    <div class="flex flex-col lg:flex-row justify-between items-center lg:gap-20 lg:p-5">
       <div class="space-y-4 flex flex-1 flex-col items-center text-center  mb-6  lg:items-start lg:text-start ">
         <h3 class="text-white font-extrabold text-2xl lg:text-3xl">Get In Touch</h3>
         <p class="text-[#ffffff99]">If you have any Question You can Contact with us. We help you by any how.</p>
