--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
     </section>
     <section class="grid grid-cols-1 lg:grid-cols-4 lg:my-20 my-12 gap-8">
       <div class="flex flex-col justify-center items-center space-y-4">
-        <div class="radial-progress font-extrabold text-red-500" style="--value:87;" role="progressbar">87%</div>
+        <div class="radial-progress  text-red-500" style="--value:87;" role="progressbar">
+          <div class="text-[#131318] text-2xl font-extrabold">87%</div>
+
+        </div>
         <div>
           <h3 class="text-center text-[#131318] font-semibold text-xl">Prayer Facility</h3>
           <p class="text-center text-[#13131899] mt-4">A serene space for reflection, our prayer facility offers
@@ -151,14 +154,16 @@
         </div>
       </div>
       <div class="flex flex-col justify-center items-center space-y-4">
-        <div class="radial-progress font-extrabold text-[#49D293]" style="--value:95;" role="progressbar">95%</div>
+        <div class="radial-progress font-extrabold text-[#49D293]" style="--value:95;" role="progressbar">
+          <div class="text-[#131318] text-2xl font-extrabold">95%</div>
+        </div>
         <div>
           <h3 class="text-center text-[#131318] font-semibold text-xl">Experienced Coach</h3>
           <p class="text-center text-[#13131899] mt-4">"Guided by the wisdom of an experienced coach"</p>
         </div>
       </div>
       <div class="flex flex-col justify-center items-center space-y-4">
-        <div class="radial-progress font-extrabold text-[#FFB546]" style="--value:90;" role="progressbar">90%</div>
+        <div class="radial-progress font-extrabold text-[#FFB546]" style="--value:90;" role="progressbar"><div class="text-[#131318] text-2xl font-extrabold">90%</div></div>
         <div>
           <h3 class="text-center text-[#131318] font-semibold text-xl">Senior Player</h3>
           <p class="text-center text-[#13131899] mt-4">A seasoned maestro on the field, our senior player embodies skill
@@ -166,7 +171,7 @@
         </div>
       </div>
       <div class="flex flex-col justify-center items-center space-y-4">
-        <div class="radial-progress font-extrabold text-[#4C8DF1]" style="--value:80;" role="progressbar">80%</div>
+        <div class="radial-progress font-extrabold text-[#4C8DF1]" style="--value:80;" role="progressbar"><div class="text-[#131318] text-2xl font-extrabold">80%</div></div>
         <div>
           <h3 class="text-center text-[#131318] font-semibold text-xl">Training Ground</h3>
           <p class="text-center text-[#13131899] mt-4">Our training ground molds athletes with relentless dedication</p>
