--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     </div>
                   </div>
                   <h1 class="text-xl font-bold">World Cup Trophy</h1>
-                  <p class="py-5">Icon of glory, our World Cup trophy epitomizes triumph and excellence.
+                  <p class="py-5">Icon of glory, our World Cup trophy epitomizes triumph and excellence, wonderful.
                   </p>
                   <div class="flex lg:justify-between lg:flex-row flex-col">
                     <p class="text-[#FF4240] font-bold">Price - $22.00</p>
@@ -354,7 +354,7 @@
                     </div>
                   </div>
                   <h1 class="text-xl font-bold">World Cup Cap</h1>
-                  <p class="py-5">Champion style, iconic emblem—our World Cup cap epitomizes victory spirit.
+                  <p class="py-5">Champion style, iconic emblem—our World Cup cap epitomizes victory spirit, so good.
                   </p>
                   <div class="flex lg:justify-between lg:flex-row flex-col">
                     <p class="text-[#FF4240] font-bold">Price - $22.00</p>
